# EidNN

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cppBuild.yml
examples/face/: CMakeLists.txt  faceDataInput.cpp  faceDataInput.h  main.cpp  widget.cpp  widget.h  widget.ui
examples/face/data/: main.py
examples/lernfahrer/: CMakeLists.txt  car.cpp  car.h  carfactory.cpp  carfactory.h  glwidget.cpp  glwidget.h  main.cpp  resources.qrc  strange.cpp  strange.h  track.cpp  track.h  trackmap.cpp  trackmap.h  wald.cpp  wald.h  window.cpp  window.h
examples/lernfahrer/test/: main.cpp  t_car.cpp
examples/lernfahrer/tracks/: car.xcf  track1.xcf  track2.xcf  track3.xcf  track4.xcf  track5.xcf
examples/mnist/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
examples/mnist/dataInput/: mnistDataInput.cpp  mnistDataInput.h
lib/: CMakeLists.txt
lib/inc/: costFunction.h  crossEntropyCost.h  dataInput.h  evolution.h  genetic.h  helpers.h  layer.h  network.h  network_cb.h  neuron.h  quadraticCost.h  regularization.h  simulation.h
lib/src/: crossEntropyCost.cpp  dataInput.cpp  evolution.cpp  genetic.cpp  helpers.cpp  layer.cpp  network.cpp  neuron.cpp  quadraticCost.cpp  regularization.cpp  simulation.cpp
lib/test/: main.cpp  t_costfunctions.cpp  t_datainput.cpp  t_evolution.cpp  t_genetic.cpp  t_helpers.cpp  t_layer.cpp  t_network.cpp  t_neuron.cpp  t_simulation.cpp
