cmake_minimum_required(VERSION 3.0.0)
PROJECT(eidnn)

#---------------------------------------------------------------------
# library
#---------------------------------------------------------------------
add_subdirectory(lib)
add_subdirectory(examples/mnist)
add_subdirectory(examples/face)
add_subdirectory(examples/lernfahrer)



